--- a/data/deg_only/config.json
+++ b/data/deg_only/config.json
@@ -13,12 +13,12 @@
         0,
         327
     ],
-    "sparsity": 3,
+    "sparsity": 1,
     "network_size": 64,
-    "num_generations": 90,
+    "num_generations": 50,
     "popsize": 100,
     "population_file": "data/preprocessed/normalized_population_BikeCHI.pkl",
-    "age_gap": 20,
+    "age_gap": 100,
     "mutation_rate": 0.05,
     "mutation_odds": [
         1,
@@ -568,6 +568,32 @@
                 0.0,
                 0.0,
                 0.0
+            ]
+        },
+        "flux_distribution": {
+            "target": [
+                304.8292531840371,
+                23.08122540967271,
+                9.36639010957437,
+                4.695620924578254,
+                2.8710589394153345,
+                1.784668431734311,
+                1.0057442138364356,
+                0.6531813391974148,
+                0.3691672008693319,
+                0.7911277587640237
+            ],
+            "range": [
+                86.5630019438889,
+                15.876464881895421,
+                7.9961522249888555,
+                4.552918038698802,
+                2.7496096115590696,
+                2.2036775966003805,
+                1.4321795279526008,
+                1.0049876280475807,
+                0.7197895068117097,
+                0.7186319159766813
             ]
         }
     }
