--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "debugpy",
             "request": "launch",
             "program": "${workspaceFolder}/analysis.py",
-            "args": ["data/deg_only_high_popsize/"],
+            "args": ["data/topo_flux_degree/"],
             "console": "integratedTerminal"
         },
         {
