fix scipy import

--- a/data/topo_flux_sparsity_mean/config.json
+++ b/data/topo_flux_sparsity_mean/config.json
@@ -33,6 +33,7 @@
     ],
     "crossover_rate": 0.6,
     "tournament_probability": 0.25,
+    "eps": 0.75,
     "eval_funcs": {
         "topology": {
             "target": 0.014828209427602617,
